# image-semantic-search

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  eval.py  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
docs/: HOW-THIS-WAS-BUILT.md
scripts/: fetch_images.py  fetch_more_images.py
src/: app.py  embeddings.py  index.py
tests/: test_scaffold.py  test_search.py
web/: index.html
workflows/: README.md  find-verify.js  implement-fanout.js  judge-panel.js  scope-map.js
